--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <link rel="shortcut icon" href="/favicon.ico">
 <style>.button,.input{box-sizing:border-box}.button,.button:visited{color:#444}.button,.buttons,.disclaimer,.logo{text-align:center}html{font-family:arial,sans-serif}.wrapper{margin:0 auto;max-width:500px}h1{font-weight:400}.input{font:16px arial,sans-serif;width:100%;padding:6px 9px;background-color:#fff;border:1px solid #d9d9d9;border-top-color:silver;height:28px;line-height:28px;vertical-align:top;outline:0}.input:focus{border-color:#4d90fe}.button{display:inline-block;background-image:-webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));background-image:-webkit-linear-gradient(top,#f5f5f5,#f1f1f1);background-color:#f5f5f5;background-image:linear-gradient(top,#f5f5f5,#f1f1f1);background-image:-o-linear-gradient(top,#f5f5f5,#f1f1f1);-webkit-border-radius:2px;-webkit-user-select:none;border:1px solid #dcdcdc;border:1px solid rgba(0,0,0,.1);border-radius:2px;cursor:default;font-size:11px;font-weight:700;margin:11px 8px;min-width:54px;padding:0 8px;height:29px;line-height:27px;outline:0;text-decoration:none}.button:hover{background-image:-webkit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#f1f1f1));background-image:-webkit-linear-gradient(top,#f8f8f8,#f1f1f1);-webkit-box-shadow:0 1px 1px rgba(0,0,0,.1);background-color:#f8f8f8;background-image:linear-gradient(top,#f8f8f8,#f1f1f1);background-image:-o-linear-gradient(top,#f8f8f8,#f1f1f1);border:1px solid #c6c6c6;box-shadow:0 1px 1px rgba(0,0,0,.1);color:#222}.button:focus{border:1px solid #4d90fe;outline:0}.logo{margin:150px auto 25px}@media screen and (max-width:480px){.logo{margin:10px auto 25px}}.logo img{height:95px;width:auto}.disclaimer{font-size:8px;text-transform:uppercase;position:absolute;bottom:5px;left:0;right:0;color:#ccc}.z{color:#156AEC}.l{color:#D33F2A}.a1{color:#FFBA02}.t{color:#156AEC}.a2{color:#009956}.n{color:#D33F2A}</style>
-<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-18772114-21','auto');ga('send','pageview');</script>
 
 	<link rel="stylesheet" href="css/game.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
@@ -24,6 +23,7 @@
 		<div id="goal"></div>
 		<img src="img/ball.png" id="ball">
 		<img src="img/mario.png" id="mario">
+		<img src="img/goalkeeper.png" id="goalkeeper">
 		<div id="marquee">
 			<div>&nbsp;WWW.BAAALOTELLI.COM SEARCH ENGINE&nbsp;</div>
 		</div>
@@ -42,8 +42,6 @@
 </div>
 </div>
 </form>
-<script>var form=document.querySelector('form');var input=document.getElementById('field');form.addEventListener('submit',function(ev){ev.preventDefault();var redirect='https://google.com/search?q=balotelli+'+input.value;var redirect='http://www.baaalotelli.com/q.php?cx=partner-pub-0815509394811364%3A3916344313&cof=FORID%3A10&ie=UTF-8&q=balotelli+'+input.value+'&sa=Search';window.location=redirect;});</script>
-<script type="text/javascript" src="http://www.google.it/coop/cse/brand?form=cse-search-box&amp;lang=it"></script>
 </div>
 </body>
 </html>
