Goalkeeper shadow and blocks

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<div id="goal"></div>
 		<img src="img/ball.png" id="ball">
 		<img src="img/mario.png" id="mario">
+		<img src="img/gk-shadow.png" id="goalkeeper-shadow">
 		<img src="img/goalkeeper.png" id="goalkeeper">
 		<div id="marquee">
 			<div>&nbsp;WWW.BAAALOTELLI.COM SEARCH ENGINE&nbsp;</div>
